# infotecs-test-task

./: .gitignore  CMakeLists.txt  README.md  config.hpp
program1/: CMakeLists.txt
program1/src/: main.cpp
program1/src/detail/: buffer.hpp  handler.cpp  handler.hpp
program1/src/supply/: support_funcs.cpp  support_funcs.hpp
program1/src/ui/: user_interface.cpp  user_interface.hpp
program2/: CMakeLists.txt
program2/src/: main.cpp
program2/src/detail/: handler.cpp  handler.hpp  server.cpp  server.hpp
